--- a/.github/workflows/build-n-deploy-to-aws-staging.yml
+++ b/.github/workflows/build-n-deploy-to-aws-staging.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - release
+      - [release]
     paths:
-      - 'apps/cti'
+      - 'apps/cti/**'
 
 env:
   REPO: lodestar-client-cti
