--- a/.github/workflows/build-n-deploy-to-aws-staging.yml
+++ b/.github/workflows/build-n-deploy-to-aws-staging.yml
@@ -3,8 +3,7 @@ name: Build & Deploy to AWS(Staging)
 on:
   workflow_dispatch:
   push:
-    branches:
-      - release
+    branches: [release]
     paths:
       - apps/cti/**
 
