--- a/.github/workflows/build-n-deploy-to-aws-staging.yml
+++ b/.github/workflows/build-n-deploy-to-aws-staging.yml
@@ -3,9 +3,9 @@ name: Build & Deploy to AWS(Staging)
 on:
   workflow_dispatch:
   push:
-    branches: [release]
+    # branches: [release]
     paths:
-      - apps/cti/**
+      - 'apps/cti/**'
 
 env:
   REPO: lodestar-client-cti
